traces/bug_116.txt
src/medit/sftcpy.c:233: error: DEAD_STORE
  The value written to &ptr (type float*) is never used.
Showing all 1 steps of the trace


src/medit/sftcpy.c:233:7: Write of unused value
231.         }
232.   
233.         ptr += (7*nbv);
             ^
234.         break;
235.   
